# master-workflow

./: .claude-flow-backup-location.txt  .claude-flow-config.json  .dockerignore  .gitignore  .pre-commit-config.yaml  ADVANCED-FRAMEWORK-SCAFFOLDING-COMPLETE.md  AGENT-ARCHITECTURE.md  AGENT-BOOTSTRAP.md  AGENT-COMMUNICATION-FIXES-SUMMARY.md  AGENT-INSTRUCTION-FORMATS-GUIDE.md  AGENT-OS-INTEGRATION-SUMMARY.md  ARCHITECTURE.md  AUDIT-SESSION-SUMMARY.md  CLAUDE-CODE-PLAN.MD  CLAUDE-FLOW-2-COMPLETE-WORKFLOW-TEST-IMPLEMENTATION.md  CLAUDE-FLOW-2-DEPENDENCY-MANAGER-IMPLEMENTATION-COMPLETE.md  CLAUDE-FLOW-2-IMPLEMENTATION-SUMMARY.md  CLAUDE-FLOW-2.0-COMPLETE-USER-GUIDE.md  CLAUDE-FLOW-2.0-INTEGRATION-SPECIFICATION.md  CLAUDE-FLOW-2.0-INTELLIGENT-FEATURES-COMPLETE.md  CLAUDE-FLOW-2.0-PORTABLE-SYSTEM-COMPLETE.md  CLAUDE-FLOW-2.0-TEMPLATE-CUSTOMIZATION-COMPLETE.md  CLAUDE-FLOW-INIT-README.md  CLAUDE-FORK-ANALYSIS.md  CLAUDE.md  CODEBASE-AUDIT-REPORT.md  CODE_OF_CONDUCT.md  COMPREHENSIVE-INTEGRATION-TEST-FINAL-REPORT.md  COMPREHENSIVE-PERFORMANCE-TESTING-IMPLEMENTATION.md  COMPREHENSIVE-SECURITY-AUDIT-REPORT.md  COMPREHENSIVE-TEST-ANALYSIS-REPORT.md  COMPREHENSIVE-TEST-EXECUTION-REPORT-FULLSTACK-MODERN.md  CONTRIBUTING.md  CRITICAL-BUGS-SUMMARY.md  CRITICAL-WORKFLOW-FIXES-SUMMARY.md  DATABASE-FIXES-SUMMARY.md  DOCUMENTATION-SUMMARY.md  Dockerfile  ENHANCE-QUEEN-CONTROLLER-IMPLEMENTATION-PLAN.md  ENHANCED-MCP-OPTIMIZATION-COMPLETE.md  (+149 more)
.agent-os/: agentOS-config.json
.ai-dev/: analysis.json  approach-selection.json  approach.json  config.json  custom-docs.json
.ai-workflow/: .installation-info  README.md  generation-record.json  initial-prompt.md  installation-config.json  installation-record.json  workflow-runner.js
templates/fullstack-modern/backend/: Cargo.toml  Dockerfile  Dockerfile.dev
templates/fullstack-modern/backend/migrations/: 0001_initial.sql
templates/fullstack-modern/backend/src/: auth.rs  config.rs  database.rs  error.rs  main.rs  models.rs  websocket.rs
(+998 files in other folders)
